# l2

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STATUS.md  l2.system
core/: host.c  sys.h
docs/: ARCHITECTURE.md  BUILD.md  CONTAINMENT_VECTOR.md  CONTAINMENT_VECTOR_INTERFACE.md  HOST_TERMINAL_INTERFACE.md  MEMORY_SAFETY.md  PROTOCOL.md  SEL4_INTEGRATION.md  SYSTEM_MODEL.md  TERMINAL_INTERFACE.md  TREASURE_CHEST_MODEL.md  sel4_coupling.md
host/: core.rs
src/: README.md  main.rs
src/common/: safe.c  safe.h
src/core/: chest_ops.h  core.c  core.h  sys.h
src/vector/: example_vector.c
