[package]
name = "l2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"

[[bin]]
name = "l2"
path = "src/main.rs"

# Future out-of-process core (L2P server). Currently a stub in host/core.rs.
# Will become a separate binary that the l2 client can spawn or connect to.
[[bin]]
name = "l2-core"
path = "host/core.rs"
